--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -29,14 +29,21 @@
   "ENROLLMENTVIEW": "ENROLLMENTVIEW",
   "enrollment-approved": "You have been approved for the service.",
   "continue-clicking-here": "Continue by clicking here.",
-  "awaiting-approval": "You in the Waiting Room!",
+  "awaiting-approval": "You are in the Waiting Room!",
   "copy-link-admin": "Copy the approval link to the administrator",
   "action-failed": "Action failed:",
   "approval-code": "Your approval code:",
-  "waiting-approval-instruction": "You are in the Waiting Room awaiting  your administrator user to approve you. Show them the QR code below, or press 'Copy Link' and send the approval link.",
+  "waiting-approval-instruction": "You are awaiting your administrator to approve you to the services. Show them the QR code below, or press 'Copy Link' and send them the approval link.",
   "approval-waiting-title": "Waiting for Approval (instructions).",
-  "approval-instruction-intro": "You are waiting for the administrator's approval to access the service. Approval can occur in one of these three ways:",
+  "approval-instruction-intro": "You are waiting administrator to approve you to the service. Approval can occur in one of these three ways:",
   "approval-instruction-qr": "Your administrator scans the <strong>QR code</strong> above from your screen. It contains the approval link, which the admin can access.",
   "approval-instruction-copy": "You may copy and send the <strong>approval link</strong> to your administrator, using a trusted method, such as email or an app.",
-  "approval-instruction-send": "Just send your <strong>approval code</strong> to your administrator, who will enter it into their approval view."
+  "approval-instruction-send": "Just send your <strong>approval code</strong> to your administrator, who will enter it into their approval view.",
+
+  "MTLSCREATEVIEW": "MTLSCREATEVIEW",
+  "mtls-download-install-title": "Download and install the mTLS Certificate",
+  "mtls-download-install-description": "You can use the service only, if your device has a mTLS Certificate of this server installed to your device. Download and install the key to your device.",
+  "mtls-installation-instructions": "Installation instructions",
+  "download-your-key": "Download your key",
+  "navigate-with-your-key": "Use your key to access the services"
 }
