--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -44,5 +44,18 @@
   "mtls-download-install-description": "Voit käyttää palvelua vain, jos laitteellasi on siihen mTLS-avain. Lataa ja asenna avain laitteellesi.",
   "mtls-installation-instructions": "mTLS-asennusohjeet",
   "download-your-key": "Lataa avaimesi",
-  "navigate-with-your-key": "Siirry palveluun avaimellasi"
+  "navigate-with-your-key": "Siirry palveluun avaimellasi",
+
+  "MTLSINSTRUCTIONS-MAC": "MTLSINSTRUCTIONS-MAC",
+  "mac-instructions.download-key.title": "1. Lataa 4vaimesi",
+  "mac-instructions.download-key.description1": "Paina <strong>Lataa avain</strong>-painiketta. Vastaanotat tiedoston <em>peitenimesi.pfx.</em>",
+  "mac-instructions.open-key.title": "2. Avaa avaimesi",
+  "mac-instructions.open-key.description1": "<strong>a.</strong> <strong>Avaa</strong> lataukset-kansiosi ja kaksoiskilkkaa tiedostoa. Avainnippu aukeaa.",
+  "mac-instructions.open-key.description2": "<strong>b.</strong> Avainnippu kysyy Mac-käyttäjänimeäsi ja salasanaa. <strong>Syötä</strong> ne ja paina OK.",
+  "mac-instructions.open-key.description3": "<strong>c.</strong> Ruutu kysyy kohteen (avaimen) salasanaa. Salasana on <strong>peitenimesi</strong>. <small>Esimerkissä salasana on <em>PROGRAMMFEHLERMAEHER4.</em></small> Jos kysytään, mihin avainnippuun 'keychain' tallennetaan, vastaus on <em>järjestelmä</em> (system).",
+  "mac-instructions.set-key.title": "3. Aseta avaimesi",
+  "mac-instructions.set-key.description1": "<strong>a.</strong> <strong>Valitse</strong> avainnipussa vasemmalta 1. <em>Järjestelmä</em> ja yläpalkista 2. <em>Varmenteet</em>.<br /><small> Kuvassa Avaimet. Tee ensin Varmenteet. Varmenteissa kaksoisnapauta varmennetta 'peitenimesi'ja valitse <em>Luottamus</em> - <em>Luota aina.</em>. Tämän jälkeen tee kuvan mukaiset muutokset <em>Avaimet</em>-valikossa. </small>",
+  "mac-instructions.set-key.description2": "<strong>b.</strong> Kaksoisnapauta avaintasi <em>Peitenimesi.pfx</em>. Valitse <strong>Pääsynhallinta</strong>. Anna Mac-käyttäjätunnuksesi ja salasanasi.",
+  "mac-instructions.set-key.description3": "<strong>c.</strong> Valitse asetus <strong>Salli kaikkien käyttää...</strong>, ja tallenna muutokset. Kysyttäessä anna Mac-käyttäjätunnuksesi ja salasanasi.",
+  "mac-instructions.set-key.description4": "Avain on nyt asetettu! Paina <strong>Siirry palveluun</strong>-näppäintä."
 }
