--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -43,7 +43,7 @@
   "MTLSINFOMODAL": "MTLSINFOMODAL",
   "what-is-mtls": "What is mTLS?",
   "what-is-mtls-title": "What is mTLS?",
-  "mtls-description": "By using an mTLS key installed on your device to connect to our service, we can ensure the connection comes <strong>directly from you.</strong> No one else can impersonate you. Likewise, you are assured that on the other end it's us. <br /><br /> All services from Rasenmaeher that you take into use encrypt their traffic with your mTLS key.",
+  "mtls-description": "By using an mTLS key installed on your device to connect to our service, we can ensure the connection comes <strong>from you.</strong> No one else can impersonate you. Likewise, you are assured that on the other end, it's us. <br /><br /> All services from Rasenmaeher that you take into use, encrypt their traffic with your mTLS key.",
   "ok": "OK",
 
   "MTLSCREATEVIEW": "MTLSCREATEVIEW",
@@ -64,5 +64,15 @@
   "mac-instructions.set-key.description1": "<strong>a.</strong> <strong>Select</strong> 1. <em>System</em> from the left bar of Mac Keychain. In the System view, at first, select 2. <em>Certificates</em> from the top bar. <br/> <br/> In the Certificates view, find a certificate named after your callsign. double-click your certificate 'yourcallsign' and choose <em>Trust</em> - <em>Always Trust.</em> Then follow the next guided changes in the <em>Keys</em> menu.</small>",
   "mac-instructions.set-key.description2": "<strong>b.</strong> Double-click your key <em>YourCallsign.pfx</em>. Select <strong>Access Control</strong>. Enter your Mac username and password.",
   "mac-instructions.set-key.description3": "<strong>c.</strong> Choose the option <strong>Allow all applications to access this item</strong>, and save the changes. When asked, enter your Mac username and password.",
-  "mac-instructions.set-key.description4": "Your key is now set up! Press the <strong>Navigate to the service</strong> button."
+  "mac-instructions.set-key.description4": "Your key is now set up! Press the <strong>Navigate to the service</strong> button.",
+
+  "MTLSANDROIDINSTRUCTIONS": "MTLSANDROIDINSTRUCTIONS",
+  "android-instructions.step1.title": "1. Download and Open Your Key",
+  "android-instructions.step1.description": "Press the <strong>Download Key</strong> button. The key will download, and a dialog will ask for a password. The password is always <strong>yourcallsign</strong>.",
+  "android-instructions.step2.title": "2. Set Your Key",
+  "android-instructions.step2.description1": "The window asks for the certificate type. It is a <strong>VPN and app usage certificate</strong>.",
+  "android-instructions.step2.description2": "The window prompts you to name the certificate. Your callsign is prefilled. Do not change the name, just press <strong>OK</strong>.",
+  "android-instructions.step3.title": "3. Access the Service with Your Key",
+  "android-instructions.step3.description1": "You are now ready! When you press the <em>Access the Service</em> button, the browser will ask which certificate you want to use. Press <strong>OK</strong>.",
+  "android-instructions.step3.description2": "After this, you can always access the service with your key. You don't need passwords because the service recognizes you by your key."
 }
