--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -53,7 +53,7 @@
   "navigate-with-your-key": "Siirry palveluun avaimellasi",
 
   "MTLSINSTRUCTIONS-MAC": "MTLSINSTRUCTIONS-MAC",
-  "mac-instructions.download-key.title": "1. Lataa 4vaimesi",
+  "mac-instructions.download-key.title": "1. Lataa avaimesi",
   "mac-instructions.download-key.description1": "Paina <strong>Lataa avain</strong>-painiketta. Vastaanotat tiedoston <em>peitenimesi.pfx.</em>",
   "mac-instructions.open-key.title": "2. Avaa avaimesi",
   "mac-instructions.open-key.description1": "<strong>a.</strong> <strong>Avaa</strong> lataukset-kansiosi ja kaksoiskilkkaa tiedostoa. Avainnippu aukeaa.",
@@ -73,5 +73,20 @@
   "android-instructions.step2.description2": "Ikkuna pyytää nimeämään varmenteen. Valmiiksi täytettynä on peitenimesi. Älä muuta nimeä, paina vain <strong>OK.</strong>.",
   "android-instructions.step3.title": "3. Siirry palveluun avaimellasi",
   "android-instructions.step3.description1": "Olet nyt valmis! Kun painat <em>Siirry palveluun</em>-painiketta, selain kysyy, mitä varmennetta haluat käyttää. Paina <strong>OK.</strong>.",
-  "android-instructions.step3.description2": "Tämän jälkeen pääset aina palveluun avaimellasi. Et tarvitse salasanoja, koska palvelu tunnistaa sinut avaimellasi.>"
+  "android-instructions.step3.description2": "Tämän jälkeen pääset aina palveluun avaimellasi. Et tarvitse salasanoja, koska palvelu tunnistaa sinut avaimellasi.>",
+
+  "MTLSIOSINSTRUCTIONS": "MTLSIOSINSTRUCTIONS",
+  "ios-instructions.step1.title": "1. Lataa avaimesi",
+  "ios-instructions.step1.description1": "Paina <strong>Lataa avain</strong>-painiketta. Laitteesi kysyy, sallitaanko asetusprofiilin lataaminen. Paina <strong>Salli</strong>.",
+  "ios-instructions.step1.description2": "Laitteesi ilmoittaa, että avain on ladattu.",
+  "ios-instructions.step2.title": "2. Avaa avaimesi",
+  "ios-instructions.step2.description1": "Vedä näyttöä keskeltä alaspäin, ja kirjoita avautuvaan hakukenttään <em>profiili.</em> Valitse <strong>VPN ja laitehallinta.</strong>",
+  "ios-instructions.step2.description2": "VPN ja laitehallinta -valikossa, valitse Ladattu profiili <strong>Henkilövarmenne</strong> - tämä on juuri lataamasi avain.",
+  "ios-instructions.step3.title": "3. Aseta avaimesi",
+  "ios-instructions.step3.description1": "Valittuasi avaimen, laite kysyy omaa pääsykoodiasi. Syötä se.",
+  "ios-instructions.step3.description2": "Laite antaa varoituksen. Paina <strong>Asenna</strong> oikeasta yläkulmasta.",
+  "ios-instructions.step3.description3": "Laite kysyy avaimen salasanaa. Salasana on aina antamasi <strong>peitenimi</strong>, esimerkiksi JANNE1.",
+  "ios-instructions.step3.description4": "Onnistuneen salasanan jälkeen, laite ilmoittaa, että profiili eli avain on asennettu. Tämän jälkeen siirry takaisin Rasenmaeher-sovellukseen selaimellasi. Paina siellä <strong>Siirry palveluun avaimellasi</strong> -nappia",
+  "ios-instructions.step3.description5": "Selain toteaa, että sovellus vaatii asiakasvarmenteen (eli juuri asentamasi avaimen). Paina <strong>Jatka.</strong>",
+  "ios-instructions.step3.description6": "Avain on nyt asetettu! Tämän jälkeen aina, kun saavut Rasenmaeheriin palvelu tunnistaa sinut omalla avaimellasi. <br /> <br /> Mikäli päädyt login-sivulle, paina 'Minulla on avain'-näppäintä."
 }
