--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -5,7 +5,7 @@
   "link-copied": "Link copied!",
   "copy-link": "Copy link for the administrator",
 
-  "FOOTER": "FOOTER",
+  "FOOTERS": "FOOTERS",
   "footer.loading": "Ladataan...",
   "footer.authenticatedWithMtls": "Tunnistautunut mTLS:llä",
   "footer.proudlyServedBy": "Sovelluksen tarjoaa:",
@@ -13,6 +13,12 @@
   "footer.allRightsReservedFDFnotice": "Puolustusvoimat. Kaikki oikeudet pidätetään",
   "footer.allRightsReservedPVATK": "PVATK. Kaikki oikeudet pidätetään.",
   "footer.feedbackForm": "Kerro palautetta tai ideoita kehittäjille lomakkeella!",
+
+  "PRIVACYPOLICYMODAL": "PRIVACYPOLICYMODAL",
+  "privacyPolicy.triggerText": "Tietosuoja",
+  "privacyPolicy.title": "Tietosuojaseloste",
+  "privacyPolicy.description": "Keräämme tietoja käyttäjistä, jotta voimme tarjota parempaa palvelua ja varmistaa palvelun turvallisuuden valvonnalla. <br /><br />Emme luovuta tietoja kolmansille osapuolille mihinkään kaupallisiin tarkoituksiin. Emme käytä kolmannen osapuolen tarjoamia jäljittäviä evästepalveluita tiedon keräämiseen. <br /><br /><strong>Tietoja, mitä keräämme:</strong><li>IP-osoitteesi.</li><li>Maa, josta liikennöit.</li><li>User agent, eli käyttämäsi selain ja käyttöjärjestelmä.</li><li>Palveluun syöttämäsi tiedot.</li><br /><strong>Mitä tietoja emme kerää:</strong><li>Kolmannen osapuolen jäljittäviin eväisteisiin (3rd party tracking cookies) perustuvaa tietoa. </li><li>Mitään henkilötietoja, mukaanlukien sähköpostiosoitteita, puhelinnumeroja.</li><br />Tietoja käsittelee Puolustusvoimat ja Puolustusvoimien valtuuttama henkilöstö Puolustusvoimien ohjauksessa.<br />Kerättyä tietoa säilytetään Euroopan Unionin alueella. Käyttämällä palvelua hyväksyt tietosuojaselosteen.",
+  "privacyPolicy.okButton": "OK",
 
   "LOGINVIEW": "LOGINVIEW",
   "error-occured": "Tapahtui tunnistamaton virhe.",
