do i18n for ManageUsers & usermgmtview (fi/en)

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -4,6 +4,7 @@
   "awaiting-response": "Awaiting response...",
   "link-copied": "Link copied!",
   "copy-link": "Copy approval link for your administrator",
+  "go-back": "Go back",
 
   "FOOTERS": "FOOTERS",
   "footer.loading": "Loading...",
@@ -127,5 +128,40 @@
 
   "SOLDIERVIEW": "SOLDIERVIEW",
   "soldierView.welcome": "Welcome, <em>{{callsign}}</em>.",
-  "soldierView.details": "The services available in this deployment are listed below. Tap a service's <strong>icon</strong> below to get using it on your device."
+  "soldierView.details": "The services available in this deployment are listed below. Tap a service's <strong>icon</strong> below to get using it on your device.",
+
+  "MANAGEUSERSVIEW": "MANAGEUSERSVIEW",
+  "manageUsersView.navbarTitle": "Manage Users",
+  "manageUsersView.serviceInfoCardTitle": "Manage Users",
+  "manageUsersView.serviceInfoCardDetails": "<strong>Add</strong>, <strong>approve</strong>, and <strong>manage</strong> users with the tools below.",
+  "manageUsersView.unfoldableCardTitle": "How it works:",
+  "manageUsersView.unfoldableCardDescription1": "<strong>Create</strong> invite code & show it to the users as a QR - or send it to them as a link or a code, to <strong>add</strong> users.",
+  "manageUsersView.unfoldableCardDescription2": "<strong>Approve</strong> users who have logged in with a invite code, to join your service.",
+  "manageUsersView.unfoldableCardDescription3": "<strong>Manage</strong> your users by promoting new admins or removing users from this deployment.",
+  "manageUsersView.addUsers": "Add Users",
+  "manageUsersView.approveUsers": "Approve Users",
+  "manageUsersView.manageUsers": "Manage Users",
+
+  "USERMANAGEMENTVIEW": "USERMANAGEMENTVIEW",
+  "userManagement.rejectionSuccessMessage": "Success: The user has been removed.",
+  "userManagement.rejectionFailedMessage": "Failure -",
+  "userManagement.serviceInfoCard.details": "List and manage users. <strong>Admins</strong> are able to add new users. <strong>Fighters</strong> are basic users who have access to your services.",
+  "userManagement.howItWorks.whatPromote": "Promoting: <strong>Promote</strong> or <strong>demote</strong> users. Promoted users gain the same rights as you currently have, as an admin.",
+  "userManagement.howItWorks.whatRemove": "Removing: Removing users will <strong>revoke</strong> their access to Rasenmaeher, and <strong>all</strong> connected services. For example, a removed user will no longer be able to connect to your situation awareness service that is managed by Rasenmaeher.",
+  "userManagement.mainDialogTitle": "Manage User",
+  "userManagement.mainDialogQuestion": "What do you want to do with the user?",
+  "userManagement.revoke.areYouSure": "Are you sure?",
+  "userManagement.revoke.cantRollback": "This action cannot be undone.",
+  "userManagement.revoke.yesIAmSure": "Yes, remove",
+  "userManagement.revoke.success": "Removing a user",
+  "userManagement.revoke.revokeButton": "Remove",
+  "userManagement.promote.dialogTitle": "Promote User",
+  "userManagement.promote.areYouSure": "Are you sure you want to promote the user to an administrator?",
+  "userManagement.promote.promoteButton": "Promote",
+  "userManagement.demote.dialogTitle": "Demote User",
+  "userManagement.demote.areYouSure": "Are you sure you want to demote the user to a regular user?",
+  "userManagement.demote.demoteButton": "Demote",
+  "userManagement.list.admins": "<small>Administrators</small>",
+  "userManagement.list.fighters": "<small>Fighters</small>",
+  "userManagement.list.nothingToList": "No users to list."
 }
