--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -4,6 +4,7 @@
   "awaiting-response": "Odottaa vastausta...",
   "link-copied": "Link copied!",
   "copy-link": "Copy link for the administrator",
+  "go-back": "Peruuta",
 
   "FOOTERS": "FOOTERS",
   "footer.loading": "Ladataan...",
@@ -126,5 +127,40 @@
 
   "SOLDIERVIEW": "SOLDIERVIEW",
   "soldierView.welcome": "Tervetuloa, <em>{{callsign}}</em>.",
-  "soldierView.details": "Joukkosi käytössä olevat palvelut ovat ohessa. Paina palvelun <strong>kuvaketta</strong> ottaaksesi sen käyttöön omalla laitteellasi."
+  "soldierView.details": "Joukkosi käytössä olevat palvelut ovat ohessa. Paina palvelun <strong>kuvaketta</strong> ottaaksesi sen käyttöön omalla laitteellasi.",
+
+  "MANAGEUSERSVIEW": "MANAGEUSERSVIEW",
+  "manageUsersView.navbarTitle": "Käyttäjienhallinta",
+  "manageUsersView.serviceInfoCardTitle": "Käyttäjienhallinta",
+  "manageUsersView.serviceInfoCardDetails": "<strong>Lisää</strong>, <strong>hyväksy</strong> ja <strong>hallitse</strong> käyttäjiä.",
+  "manageUsersView.unfoldableCardTitle": "Näin se käy",
+  "manageUsersView.unfoldableCardDescription1": "<strong>Luo</strong> kutsukoodi ja näytä sitä käyttäjillesi QR-koodina tai lähetä se heille, lisätäksesi käyttäjiä.",
+  "manageUsersView.unfoldableCardDescription2": "<strong>Hyväksy</strong> koodilla kirjautuneet käyttäjät mukaan palveluusi.",
+  "manageUsersView.unfoldableCardDescription3": "<strong>Hallitse</strong> nostamalla uusia ylläpitäjiä käyttäjistäsi, tai poistamalla käyttäjiä palvelustasi.",
+  "manageUsersView.addUsers": "Lisää käyttäjiä",
+  "manageUsersView.approveUsers": "Hyväksy käyttäjiä",
+  "manageUsersView.manageUsers": "Hallitse käyttäjiä",
+
+  "USERMANAGEMENTVIEW": "USERMANAGEMENTVIEW",
+  "userManagement.rejectionSuccessMessage": "Käyttäjän hylkääminen onnistui.",
+  "userManagement.rejectionFailedMessage": "Käyttäjän hylkääminen epäonnistui",
+  "userManagement.serviceInfoCard.details": "Listaa ja hallitse käyttäjiä. <strong>Adminit</strong> kykenevät lisäämään uusia käyttäjiä. <strong>Taistelijat</strong> ovat peruskäyttäjiä, jotka pääsevät käyttämään palveluitasi.",
+  "userManagement.howItWorks.whatPromote": "<strong>Ylennä</strong> tai <strong>alenna</strong> käyttäjiä. Ylennetyt käyttäjät saavat samat oikeudet kuin sinä nyt.",
+  "userManagement.howItWorks.whatRemove": "Käyttäjien <strong>poistaminen</strong> poistaa käyttäjän pääsyn Rasenmaeheriin ja kaikkiin yhdistettyihin palveluihin. Poistettu käyttäjä ei esimerkisi enää voi yhdistää tilannekuvaasipalveluusi.",
+  "userManagement.mainDialogTitle": "Hallitse käyttäjää",
+  "userManagement.mainDialogQuestion": "Mitä haluat tehdä käyttäjälle?",
+  "userManagement.revoke.areYouSure": "Oletko varma?",
+  "userManagement.revoke.cantRollback": "Tätä toimintoa ei voi peruuttaa.",
+  "userManagement.revoke.yesIAmSure": "Kyllä, poista",
+  "userManagement.revoke.success": "Käyttäjän poistaminen onnistui.",
+  "userManagement.revoke.revokeButton": "Poista",
+  "userManagement.promote.dialogTitle": "Ylennä käyttäjä",
+  "userManagement.promote.areYouSure": "Oletko varma, että haluat ylentää käyttäjän ylläpitäjäksi?",
+  "userManagement.promote.promoteButton": "Ylennä",
+  "userManagement.demote.dialogTitle": "Alenna käyttäjä",
+  "userManagement.demote.areYouSure": "Oletko varma, että haluat alentaa käyttäjän tavalliseksi käyttäjäksi?",
+  "userManagement.demote.demoteButton": "Alenna",
+  "userManagement.list.admins": "<small>Ylläpitäjät</small>",
+  "userManagement.list.users": "<small>Taistelijat</small>",
+  "userManagement.list.nothingToList": "Ei käyttäjiä."
 }
